--- a/web/WEB-INF/pages/infosort/insert.vm
+++ b/web/WEB-INF/pages/infosort/insert.vm
@@ -3,7 +3,7 @@
 <br>
 <div id="conbg">
 <div class=contitle>
-<div class=leftmain>新增信息门类</div>
+<div class=leftmain>新增信息分类</div>
 <div class=rightmain>&nbsp;&nbsp;<a href="/infosort/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
@@ -11,7 +11,7 @@ $validator.getDynamicJavascript()
 $validator.getStaticJavascript()
 <table width="100%"><tr><td><div id=message></div></td></tr></table>
 #if($!nameExits)
-<script>showmsg(false,"信息门类名重复",message);</script>
+<script>showmsg(false,"信息分类名重复",message);</script>
 #end
 #set($actionUrl="/infosort/actions.html?method=insert&insert=y")
 <div class=conmain>
