--- a/web/WEB-INF/pages/infosort/list.vm
+++ b/web/WEB-INF/pages/infosort/list.vm
@@ -1,7 +1,7 @@
 #renhehead()
 #renheMenu("infosort")
 #set($addNewLink = "/infosort/actions.html?method=insert")
-#set($addNewLinkText = "新增信息门类")
+#set($addNewLinkText = "新增信息分类")
 #parse( "/WEB-INF/pages/common/search_add_new_link.vm" )
 #set($urlPre = "/infosort/actions.html?method=list")
 #if($!$bizObjList)
@@ -23,16 +23,16 @@
 			<td class="tablelistbg">$biz.name</td>
 			<td class="tablelistbg">
 			#if($!biz.type=='0')
-			顶层门类
+			顶层分类
 			#elseif($!biz.type=='1')
-			中间门类	
+			中间分类	
 			#elseif($!biz.type=='2')
-			底层门类 	
+			底层分类 	
 			#end
 			</td>
 			<td class="tablelistbg">#showHHMMTime($!biz.timeCreate)</td>
 			<td class="tablelistbg">
-				<a href="/infosort/actions.html?method=insert&parentId=$vMUtils.encrypt($biz.id)"  >添加子门类</a>
+				<a href="/infosort/actions.html?method=insert&parentId=$vMUtils.encrypt($biz.id)"  >添加子分类</a>
 				<a href="/infosort/actions.html?method=update&sid=$vMUtils.encrypt($biz.id)"  >编辑</a>
 				<a href="/infosort/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)"  >删除</a>
 			</td>
