--- a/web/WEB-INF/pages/infosort/update.vm
+++ b/web/WEB-INF/pages/infosort/update.vm
@@ -3,7 +3,7 @@
 <table width="100%"><tr><td><div id=msg></div></td></tr></table>
 <div id="conbg">
 <div class=contitle>
-<div class=leftmain>编辑信息门类</div>
+<div class=leftmain>编辑信息分类</div>
 <div class=rightmain>&nbsp;&nbsp;<a href="/infosort/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
@@ -11,7 +11,7 @@ $validator.getDynamicJavascript()
 $validator.getStaticJavascript()
 <table width="100%"><tr><td><div id=message></div></td></tr></table>
 #if($!nameExits)
-<script>showmsg(false,"信息门类名重复",message);</script>
+<script>showmsg(false,"信息分类名重复",message);</script>
 #end
 #if($!updated)
 	<script type="text/javascript">showmsg(true,"更新成功!",msg);</script>
